# bitstream-spreadsheet-dsl

./: .gitignore  Cargo.toml  README.md
bittwiddler-core/: Cargo.toml
bittwiddler-core/src/: accessor.rs  bit_access.rs  human_text.rs  lib.rs  prelude.rs  property.rs  workarounds.rs
bittwiddler-dsl/: Cargo.toml
bittwiddler-dsl/src/: lib.rs
bittwiddler-dsl/src/macros/: mod.rs
bittwiddler-dsl/src/property/: emit_bit_property.rs  mod.rs  parse_bit_property.rs
bittwiddler-dsl/src/spreadsheet/: emit_spreadsheet.rs  mod.rs  parse_spreadsheet.rs
bittwiddler-dsl/tests/: bitprop-badident.txt  bitprop-badpat.txt  bitprop-bitcount-mismatch.txt  bitprop-invalidline.txt  bitprop-multiple-default.txt  bitprop-noname.txt  bitproperty.txt  testtile-badcell.ods  testtile-dupsymmap.ods  testtile-invalidsymmap.ods  testtile-malformedcell.ods  testtile.ods
bittwiddler-example-test/: Cargo.toml  build.rs
bittwiddler-example-test/src/: lib.rs
bittwiddler-macros/: Cargo.toml
bittwiddler-macros/src/: lib.rs
bittwiddler-textfile/: Cargo.toml
bittwiddler-textfile/src/: lib.rs  parser.rs  writer.rs
bittwiddler_test/: Cargo.toml
bittwiddler_test/src/: lib.rs
