[package]
name = "bittwiddler-example-test"
version = "0.1.0"
edition = "2021"

[features]
default = ["alloc"]
alloc = ["bittwiddler-core/alloc"]

[dependencies]
bittwiddler-core = { path = "../bittwiddler-core", default-features = false }
bittwiddler-macros = { path = "../bittwiddler-macros" }
bittwiddler-textfile = { path = "../bittwiddler-textfile" }
itertools = "0.13"

[build-dependencies]
bittwiddler-dsl = { path = "../bittwiddler-dsl" }
